cmake_minimum_required(VERSION 2.8)

project(examples_glfwold)


# simple examples without delfem2 
add_subdirectory(000_OpenWindowWithGLFW)

# basic funcs
add_subdirectory(100_ViewNavigationIn3D)
add_subdirectory(101_SubdivCatmull)
add_subdirectory(102_ConvexHull)
add_subdirectory(103_Noise2)
add_subdirectory(104_Noise3)
add_subdirectory(105_MeshSlices)
add_subdirectory(106_SphericalHarmonics)
add_subdirectory(107_ParamGeo2)
add_subdirectory(108_ParamGeo3)
add_subdirectory(109_ContourLine2D)
add_subdirectory(112_OffscreenRendering)
add_subdirectory(113_ProjectionBox)
add_subdirectory(114_CollisionLineHightfield)
add_subdirectory(115_ExponentialMap)
add_subdirectory(116_GridOnMesh)
add_subdirectory(117_QuadSubdivOnMesh)
add_subdirectory(120_AdaptiveDistanceField)
add_subdirectory(121_IsoSurfaceStuffing)
add_subdirectory(122_HashBvhSelfCollision)
add_subdirectory(123_HashLbvh3D)
add_subdirectory(124_4RotSymField)

# meshing
add_subdirectory(201_DynTri2dTriangulation)
add_subdirectory(202_DynTri2dRemesh)
add_subdirectory(203_DynTri3dEdgeCollapses)
add_subdirectory(204_DynTetTetrahedralization)

# rigging
add_subdirectory(300_RigSmpl)
add_subdirectory(301_RigSmplTransfer)
add_subdirectory(302_RigReadFileBVH)
add_subdirectory(303_RigReadFileGLTF)
add_subdirectory(304_RigSmplIk)
add_subdirectory(305_RigSmplIkArap)

# cad
add_subdirectory(500_Cad2d)
add_subdirectory(501_Cad2dEdit)
add_subdirectory(502_Cad2dMeshEdit)
add_subdirectory(503_Cad3d)
add_subdirectory(504_Cad2dSvg)

# fem
add_subdirectory(600_Fem2DHelmholtz)
add_subdirectory(601_FemPlateBendingMitc3)
add_subdirectory(602_Fem3DEigen)
add_subdirectory(603_Fem3DStiffwarp)
add_subdirectory(604_FemCloth_DynamicTriangle)
add_subdirectory(605_FemClothInternal)
add_subdirectory(606_PbdGrid2D)
add_subdirectory(607_PbdCloth)
add_subdirectory(608_FdmFluid2D)
add_subdirectory(609_DefLaplacian)
add_subdirectory(610_DefAsRigidAsPossible)
add_subdirectory(611_Fem2D)
add_subdirectory(612_BemPotentialFlow3D)
add_subdirectory(613_FemRod)
add_subdirectory(614_FemMitc3Eigen)
add_subdirectory(615_PbdClothCad)
add_subdirectory(616_PbdClothCadGltf)
add_subdirectory(617_PbdClothCadSmpl)
add_subdirectory(618_Fem3d)
add_subdirectory(619_Sph2d)

