cmake_minimum_required(VERSION 3.12)

project(examples_newgl_glfw_imgui)

add_subdirectory(00_SampleDemo)
add_subdirectory(01_SimpleWithoutDelfem2)
add_subdirectory(10_TriMeshViewer)
add_subdirectory(11_MshTri3TexViewer)
add_subdirectory(12_TexPaint)
add_subdirectory(13_PolylineEdit)
add_subdirectory(14_MshTri3TexPaint)