cmake_minimum_required(VERSION 3.12)

option(DFM2_HEADER_ONLY "compile delfem2 as a header-only library?" ON)

IF(NOT DFM2_HEADER_ONLY)
	message("$$$$$$$$$$$$$$$$$$$$$")
	message("generate project as STATIC library: DFM2_HEADER_ONLY=${USE_HEADERONLY}")
	project(examples_oldgl_glfw_static)
    add_subdirectory(dfm2_static_glfwold)
ELSE()
	message("$$$$$$$$$$$$$$$$$$$$$")
	message("generate project as HEADER-ONLY library:  DFM2_HEADER_ONLY=${USE_HEADERONLY}")
	project(examples_oldgl_glfw_hdronly)
ENDIF()

# simple examples without delfem2 
add_subdirectory(000_OpenWindowWithGLFW)

# basic funcs
add_subdirectory(100_ViewNavigationIn3D)
add_subdirectory(101_SubdivCatmull)
add_subdirectory(102_ConvexHull)
add_subdirectory(103_Noise2)
add_subdirectory(105_MeshSlices)
add_subdirectory(106_SphericalHarmonics)
add_subdirectory(107_ParamGeo2)
add_subdirectory(108_ParamGeo3)
add_subdirectory(109_ContourLine2D)
add_subdirectory(110_ClusteringMesh)
add_subdirectory(111_ExponentialMapElem)
add_subdirectory(115_ExponentialMapPoint)
add_subdirectory(116_GridOnMesh)
add_subdirectory(117_QuadSubdivOnMesh)
add_subdirectory(118_FastMarchingMethod)
add_subdirectory(119_Glyph)
add_subdirectory(120_AdaptiveDistanceField)
add_subdirectory(121_IsoSurfaceStuffing)
add_subdirectory(122_HashBvhSelfCollision)
add_subdirectory(123_HashLbvh3D)
add_subdirectory(124_4RotSymField)
add_subdirectory(125_GizmoRot)
add_subdirectory(126_GizmoTransl)
add_subdirectory(127_GizmoAffine)
add_subdirectory(129_CubeGridEdit)
add_subdirectory(134_Primitives)
add_subdirectory(137_VoxelLineIntersection)
add_subdirectory(138_RigReadFileBiovision)
add_subdirectory(139_Pick)
add_subdirectory(140_PickPropagate)
add_subdirectory(141_RigBendCapsule)
add_subdirectory(142_BinaryClusteringPoints3D)
add_subdirectory(143_Image2MeshInterpolation)
add_subdirectory(144_BinaryClusteringPoints2D)
add_subdirectory(145_Lloyd)
add_subdirectory(146_4RotSymFieldMultilevel)
add_subdirectory(147_HashLbvh3RayTri)
add_subdirectory(148_RayCasting)
add_subdirectory(149_PathTracingSimple)

# dynamic meshing
add_subdirectory(201_DynTri2dTriangulation)
add_subdirectory(202_DynTri2dRemesh)
add_subdirectory(203_DynTri3dEdgeCollapses)
add_subdirectory(204_DynTetTetrahedralization)
add_subdirectory(205_DynTri3SimpilfyQuadratic)

# cad
add_subdirectory(500_Cad2d)
add_subdirectory(501_Cad2dEdit)
add_subdirectory(502_Cad2dMeshEdit)
add_subdirectory(503_Cad3d)
add_subdirectory(504_Cad2dSvg)
add_subdirectory(505_Cad3ReadStep)

# fem
add_subdirectory(600_Fem2DHelmholtz)
add_subdirectory(601_FemPlateBendingMitc3)
add_subdirectory(602_Fem3DEigen)
add_subdirectory(603_Fem3DStiffwarp)
add_subdirectory(604_FemCloth_DynamicTriangle)
add_subdirectory(605_FemClothInternal)
add_subdirectory(606_PbdGrid2D)
add_subdirectory(607_PbdCloth)
add_subdirectory(608_FdmFluid2D)
add_subdirectory(609_DefLaplacian)
add_subdirectory(610_DefArapEdge)
add_subdirectory(611_DefArap)
add_subdirectory(612_BemPotentialFlow3D)
add_subdirectory(613_FemRod)
add_subdirectory(614_FemMitc3Eigen)
add_subdirectory(615_PbdClothCad)
add_subdirectory(616_FemRod3Static)
add_subdirectory(617_FemRodHairSelfcollision)
add_subdirectory(618_Fem3Tet)
add_subdirectory(619_Sph3)
add_subdirectory(620_FemClothSelfCollision)
add_subdirectory(621_Fem2)
add_subdirectory(622_FemRodHairStatic)
add_subdirectory(623_FemRodHairDynamic)
add_subdirectory(624_DefArapUi)
add_subdirectory(625_Fem2MasterSlave)
add_subdirectory(626_RgdRotation)
add_subdirectory(627_Rgd2dCollision)
add_subdirectory(628_FemHyper3)
add_subdirectory(629_Rgd2Caterpillar)
add_subdirectory(630_FemRod2Static)
add_subdirectory(631_FemRod2Dynamic)
add_subdirectory(632_PbdSpring2)
add_subdirectory(633_Mpm2Snow)
add_subdirectory(634_FemLinearSolid3)
